bug fixes
- fix some products not showing in cms
- fix promotions id bug
- fix brands menu on hover

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -675,8 +675,11 @@ a.disabled {
   outline: 0;
   box-shadow: none;
 }
-.dropdown.category-dropdown:hover > .dropdown-menu {
-  display: block;
+.dropdown.category-dropdown:hover,
+.dropdown.brands-dropdown:hover {
+  > .dropdown-menu {
+    display: block;
+  }
 }
 
 .dropdown.category-dropdown > .dropdown-toggle:active {
